--- a/SeleniumFramework/.classpath
+++ b/SeleniumFramework/.classpath
@@ -13,6 +13,8 @@
 	<classpathentry kind="lib" path="Jars/POI/poi-ooxml-schemas-4.0.0.jar"/>
 	<classpathentry kind="lib" path="Jars/POI/poi-scratchpad-4.0.0.jar"/>
 	<classpathentry kind="lib" path="Jars/POI/xmlbeans-3.0.1.jar"/>
+	<classpathentry kind="lib" path="Jars/POI/commons-collections4-4.2.jar"/>
+	<classpathentry kind="lib" path="Jars/POI/commons-compress-1.18.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
